[package]
name = "stellare-types"
version = "0.0.4"
edition = "2024"
authors = ["Kiri Wysteria <kiriwysteria@gmail.com>"]
repository = "https://github.com/kiri-wys/stellare-types"
description = "Common types for the Stellare ecosystem"
license = "MIT"
keywords = ["gamedev"]

[dependencies]
palette = { version = "0.7.6", optional = true }
stellare-types-derive = { version = "0.0.4", path = "derive" }

[features]
math = []
color = [ "dep:palette" ]
default = [ "math", "color"]

[workspace]
members = [ "derive" ]
