[package]
name = "stellare-types-derive"
version = "0.0.3"
edition = "2024"

authors = ["Kiri Wysteria <kiriwysteria@gmail.com>"]
repository = "https://github.com/kiri-wys/stellare-types"
description = "Mainly internal macros for Stellare-types"
license = "MIT"
keywords = ["gamedev"]

[lib]
proc-macro = true

[dependencies]

syn = "2"
quote = "1"
proc-macro2 = "1"

